--- a/posts/first-post.mdx
+++ b/posts/first-post.mdx
@@ -5,8 +5,11 @@ author: "Kevin Haube"
 timestamp: "2022-05-22"
 featured: true
 ---
-This is my first blog post! Isn't it *great*?
-Some of my **favorite** things are:
-* Petting dogs
-* Singing
-* Eating potato-based foods
+
+# Title
+
+To be real, Idk how this will go
+
+## subtitle
+
+anyway, suh bruh
