Fix no featured main

--- a/posts/first-post.mdx
+++ b/posts/first-post.mdx
@@ -3,7 +3,7 @@ title: "My First Post"
 description: "A test of the Gatsby data layer and MDX parsing."
 author: "Kevin Haube"
 timestamp: "2022-05-22"
-featured: false
+featured: true
 ---
 
 # Title
