--- a/posts/react-hook-event-timer.mdx
+++ b/posts/react-hook-event-timer.mdx
@@ -58,7 +58,7 @@ do with infinitely re-rendering hooks?
 Well, what is an infinitely re-rendering component but a stray recursion? You can harness
 and infinite loop by making it _think_ before it goes and calls itself yet again. I had this thought
 while considering my approach and immediately began to draw up the developer experience I wanted to have. I had a few
-known requirements: I wanted a clean, configurable implementation; I wanted it to be configurable in various units of time,
+known requirements: I wanted a clean, configurable implementation; I wanted it to be configurable in various units of time;
 and I wanted the output to just be a simple binary switch, nothing complex. Here's why:
 
 ## The approach
